src/components/bootstrap-modal/slides/decisions/styles.css
@import url("./animations.css");

.decisions-slide {
  .cursor {
    animation: decisions-cursor-movement var(--animation-duration) infinite;
    will-change: transform;
  }

  .click-animation {
    animation: decisions-cursor-clicks var(--animation-duration) infinite;
  }

  .pages {
    animation: decisions-slide-movement var(--animation-duration) infinite;
    will-change: transform;

    .current-page {
      animation: decisions-current-slide-decisions var(--animation-duration) infinite;
    }

    .next-page {
      animation: decisions-next-slide-decisions var(--animation-duration) infinite;
      transform: translate(calc(100% + var(--oe-spacing)), 0);
    }

    .next-page-2 {
      transform: translate(calc(200% + var(--oe-spacing) * 2), 0);
    }
  }

  .decision-buttons {
    position: absolute;
    top: 75%;

    display: flex;

    .decision-button {
      position: relative;
    }

    .true-decision {
      animation: decisions-true-click var(--animation-duration) infinite;
    }

    .false-decision {
      animation: decisions-false-click var(--animation-duration) infinite;
    }
  }
}

